--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Resume Builder | Home</title>
-  <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
   <header>
-    <h1>Welcome to Resume Builder</h1>
-    <p>Create your professional resume in minutes</p>
-    <a href="form.html" class="btn">Start Building</a>
+    <h1>Smart Resume Builder</h1>
+    <p>Create your professional resume quickly — for students and professionals.</p>
+    <a href="form.html" class="btn-primary">Start Building</a>
   </header>
+
+  <footer>
+    <p>© 2025 Resume Builder</p>
+  </footer>
 </body>
 </html>
